--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -249,9 +249,9 @@ $line-height-sm:              1.5 !default;
 $border-width:                1px !default;
 $border-color:                $gray-300 !default;
 
-$border-radius:               0 !default;
-$border-radius-lg:            0 !default;
-$border-radius-sm:            0 !default;
+$border-radius:               2px !default;
+$border-radius-lg:            2px !default;
+$border-radius-sm:            2px !default;
 
 $rounded-pill:                50rem !default;
 
