--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9939,11 +9939,11 @@ h3 {
     border-color: #dee2e6;
   }
 }
-body#dashboard #app .nav-tabs .nav-item.active, .modal-custom .modal-dialog .modal-content .modal-image, .modal-custom .modal-dialog .modal-body .modal-image, body#dashboard #app .filter-wrapper ul, body#dashboard #app .filter-wrapper, body#dashboard #app .btn, body#dashboard #app #content #inner-content #page-layout .card, body#dashboard #app #content #inner-content .sub-navbar .upload-form > button, body#dashboard #app #content #inner-content .sub-navbar .upload-form .custom-file > label, body#dashboard #app #content #inner-content .sub-navbar .upload-form .custom-file, body#dashboard #app #content #inner-content .sub-navbar .upload-form > input, body#dashboard #app #content #inner-content .sub-navbar .filter-bar .filter-button, body#dashboard #app #content #inner-content .search-wrapper #navbarNav ul.navbar-nav li .dropdown-menu, body#dashboard #app #content #inner-content .search-wrapper .navbar-form .search-input, ::-webkit-scrollbar-thumb, #exif-table input, #exif-table, .detailed-image, .pagination, .modal-custom .modal-dialog .modal-content, .delete-file, .close-modal, .edit-button, .download-file, .boxLook {
+body#dashboard #app .nav-tabs .nav-item.active, .modal-custom .modal-dialog .modal-content .modal-image, .modal-custom .modal-dialog .modal-body .modal-image, body#dashboard #app .filter-wrapper ul, body#dashboard #app .filter-wrapper, body#dashboard #app .btn, body#dashboard #app #content #inner-content #page-layout .card, body#dashboard #app #content #inner-content .sub-navbar .upload-form > button, body#dashboard #app #content #inner-content .sub-navbar .upload-form .custom-file > label, body#dashboard #app #content #inner-content .sub-navbar .upload-form .custom-file, body#dashboard #app #content #inner-content .sub-navbar .upload-form > input, body#dashboard #app #content #inner-content .sub-navbar .filter-bar .filter-button, body#dashboard #app #content #inner-content .search-wrapper #navbarNav ul.navbar-nav li .dropdown-menu, body#dashboard #app #content #inner-content .search-wrapper .navbar-form .search-input, body.landingpage .preview-image, ::-webkit-scrollbar-thumb, #exif-table input, #exif-table, .detailed-image, .pagination, .modal-custom .modal-dialog .modal-content, .delete-file, .close-modal, .edit-button, .download-file, .boxLook {
   border-radius: 0.125rem;
 }
 
-body#dashboard #app #content #inner-content .sub-navbar, body#dashboard #app #content #inner-content .search-wrapper, body#dashboard #app #sidebar > ul > li:hover, body#dashboard #app #sidebar > ul > li.active, body#dashboard #app #sidebar, body#dashboard #app .filter-wrapper ul, body#dashboard #app .filter-wrapper, body#dashboard #app .btn, body#dashboard #app #content #inner-content #page-layout .card, body#dashboard #app #content #inner-content .sub-navbar .upload-form > button, body#dashboard #app #content #inner-content .sub-navbar .upload-form .custom-file > label, body#dashboard #app #content #inner-content .sub-navbar .upload-form .custom-file, body#dashboard #app #content #inner-content .sub-navbar .upload-form > input, body#dashboard #app #content #inner-content .sub-navbar .filter-bar .filter-button, body#dashboard #app #content #inner-content .search-wrapper #navbarNav ul.navbar-nav li .dropdown-menu, body#dashboard #app #content #inner-content .search-wrapper .navbar-form .search-input, ::-webkit-scrollbar-thumb, #exif-table input, #exif-table, .detailed-image, .pagination, .modal-custom .modal-dialog .modal-content, .delete-file, .close-modal, .edit-button, .download-file, .boxLook {
+body#dashboard #app #content #inner-content .sub-navbar, body#dashboard #app #content #inner-content .search-wrapper, body#dashboard #app #sidebar > ul > li:hover, body#dashboard #app #sidebar > ul > li.active, body#dashboard #app #sidebar, body#dashboard #app .filter-wrapper ul, body#dashboard #app .filter-wrapper, body#dashboard #app .btn, body#dashboard #app #content #inner-content #page-layout .card, body#dashboard #app #content #inner-content .sub-navbar .upload-form > button, body#dashboard #app #content #inner-content .sub-navbar .upload-form .custom-file > label, body#dashboard #app #content #inner-content .sub-navbar .upload-form .custom-file, body#dashboard #app #content #inner-content .sub-navbar .upload-form > input, body#dashboard #app #content #inner-content .sub-navbar .filter-bar .filter-button, body#dashboard #app #content #inner-content .search-wrapper #navbarNav ul.navbar-nav li .dropdown-menu, body#dashboard #app #content #inner-content .search-wrapper .navbar-form .search-input, body.landingpage .preview-image, ::-webkit-scrollbar-thumb, #exif-table input, #exif-table, .detailed-image, .pagination, .modal-custom .modal-dialog .modal-content, .delete-file, .close-modal, .edit-button, .download-file, .boxLook {
   -ms-box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.15);
   -o-box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.15);
   box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.15);
@@ -10233,7 +10233,6 @@ td {
 /* width */
 ::-webkit-scrollbar {
   width: 0.375rem;
-  position: fixed;
 }
 
 /* Track */
@@ -10252,8 +10251,35 @@ td {
   background: rgba(88, 159, 242, 0.7);
 }
 
+footer {
+  height: 3.75rem;
+  padding: 0 3.125rem;
+}
+footer .meta-nav {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: right;
+  display: inline-flex;
+}
+footer .meta-nav > li > a {
+  color: #fff;
+  display: block;
+  line-height: 60px;
+  padding: 0 1.25rem;
+  transition: all 200ms linear 0s;
+}
+footer .meta-nav > li > a:hover {
+  text-decoration: none;
+  color: #dfe6ef;
+  background: #589ff2;
+}
+
 body.landingpage {
-  background-color: #000;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  /*THOMAS MITCHELLS GESAMTER BEITRAG ZUR WEBAPP*/
 }
 body.landingpage .hero {
   width: 100vw;
@@ -10266,18 +10292,6 @@ body.landingpage .hero {
   justify-content: center;
   align-items: center;
 }
-body.landingpage .hero .btn {
-  width: 200px;
-  color: orange;
-  text-decoration: none;
-  font-size: 1.5em;
-  border: 3px solid orange;
-  margin-top: 50px;
-}
-body.landingpage .navbar {
-  background-color: black;
-  color: white;
-}
 body.landingpage .corporate {
   display: block;
   margin-left: auto;
@@ -10285,13 +10299,6 @@ body.landingpage .corporate {
   margin-top: 200px;
   height: 50%;
   width: 50%;
-}
-body.landingpage footer {
-  height: 70px;
-  background-color: black;
-}
-body.landingpage .special {
-  float: left;
 }
 body.landingpage .About {
   margin-top: 300px;
@@ -10553,29 +10560,6 @@ body#dashboard #app #content #inner-content #page-layout > .container-fluid {
 body#dashboard #app #content #inner-content #page-layout .card {
   overflow: hidden;
   border: none;
-}
-body#dashboard #app #content footer {
-  height: 3.75rem;
-  padding: 0 3.125rem;
-}
-body#dashboard #app #content footer .meta-nav {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-align: right;
-  display: inline-flex;
-}
-body#dashboard #app #content footer .meta-nav > li > a {
-  color: #fff;
-  display: block;
-  line-height: 60px;
-  padding: 0 1.25rem;
-  transition: all 200ms linear 0s;
-}
-body#dashboard #app #content footer .meta-nav > li > a:hover {
-  text-decoration: none;
-  color: #dfe6ef;
-  background: #589ff2;
 }
 body#dashboard #app .clearInput {
   position: absolute;
