--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -53,7 +53,9 @@
 
 body {
   &.landingpage {
-    background-color: $black;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
     @import "landingpage/content";
   }
   &#dashboard {
