--- a/resources/assets/sass/dashboard/_dashboard.scss
+++ b/resources/assets/sass/dashboard/_dashboard.scss
@@ -198,7 +198,7 @@
           @extend %boxLook;
           border: none;
           flex-grow: 1;
-          margin-right: rem(20px);
+          //margin-right: rem(20px);
           min-width: 60%;
         }
         .custom-file {
