--- a/resources/assets/sass/landingpage/_content.scss
+++ b/resources/assets/sass/landingpage/_content.scss
@@ -5,7 +5,7 @@
   background-size: cover;
   background: url('../images/slider.png') no-repeat fixed center center;
   color: white;
-  text-align: center;
+  //text-align: center;
   display:flex;
   justify-content: center;
   align-items: center;
